fix overflow of goal

--- a/src/tt/mainProgress.css
+++ b/src/tt/mainProgress.css
@@ -15,6 +15,7 @@
 }
 
 .stats {
+  width: 100%;
   font-family: CustomFont; 
   text-align: center; 
   font-size: 4vw; 
